--- a/src/index.css
+++ b/src/index.css
@@ -54,25 +54,29 @@ table.greyGridTable tfoot td {
 }
 
 @media (max-width: 420px) {
-  .DayPicker {
+  .rdp {
     width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin: auto !important;
   }
 }
 
 @media (min-width: 420px) {
-  .DayPicker {
+  .rdp {
     width: 40%;
-    margin-left: 30%;
-    margin-right: 30%;
+    margin: auto !important;
   }
 }
 
-.DayPicker-TodayButton {
-  width: 50%;
-  margin-left: 25%;
-  margin-right: 25%;
+.rdp-table {
+  margin: auto;
+}
+
+.todayBtn {
+  margin: auto;
+  width: 150px;
+  color: lightskyblue;
+  margin-bottom: 20px;
+  text-align: center;
 }
 
 .centered {
